--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -1,17 +1,18 @@
 ﻿name: Acquire activation file
-on: workflow_dispatch
+on:
+  workflow_dispatch: {}
 jobs:
-  requestManualActivationFile:
+  activation:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: webbertakken/unity-request-manual-activation-file@v2
+      # Request manual activation file
+      - name: Request manual activation file
         id: getManualLicenseFile
-
-      - uses: actions/upload-artifact@v2
+        uses: game-ci/unity-request-activation-file@v2
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - name: Expose as artifact
+        uses: actions/upload-artifact@v2
         with:
-          name: Manual Activation File
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
-  
