--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ on:
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+  UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+  UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
 
 jobs:
   buildWebGL:
@@ -16,35 +18,21 @@ jobs:
     strategy:
       fail-fast: false
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Create LFS file list
-        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-      - name: Restore LFS cache
-        uses: actions/cache@v2
-        id: lfs-cache
         with:
-          path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-      - name: Git LFS Pull
-        run: |
-          git lfs pull
-          git add .
-          git reset --hard
-      - name: Restore Library cache
-        uses: actions/cache@v2
+          lfs: true
+      
+      # Cache
+      - uses: actions/cache@v2
         with:
           path: Library
-          key: Library-build-WebGL
-          restore-keys: |
-            Library-build-
-            Library-
-      - uses: webbertakken/unity-builder@v2
+          key: Library
+          
+      - uses: game-ci/unity-builder@v2
         with:
           targetPlatform: WebGL
+          unityVersion: 2022.1.231f1
 
       - uses: actions/upload-artifact@v2
         with:
@@ -55,36 +43,22 @@ jobs:
     name: Build for Windows 🖥️
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Create LFS file list
-        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-      - name: Restore LFS cache
-        uses: actions/cache@v2
-        id: lfs-cache
         with:
-          path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-      - name: Git LFS Pull
-        run: |
-          git lfs pull
-          git add .
-          git reset --hard
-      - name: Restore Library cache
-        uses: actions/cache@v2
+          lfs: true
+      
+      # Cache
+      - uses: actions/cache@v2
         with:
           path: Library
-          key: Library-build-StandaloneWindows64
-          restore-keys: |
-            Library-build-
-            Library-
-      - uses: webbertakken/unity-builder@v2
+          key: Library
+      
+      - uses: game-ci/unity-builder@v2
         with:
+          unityVersion: 2022.1.231f1
           targetPlatform: StandaloneWindows64
 
       - uses: actions/upload-artifact@v2
