--- a/Assets/Wwise/LauncherInfo.json
+++ b/Assets/Wwise/LauncherInfo.json
@@ -27,6 +27,30 @@
         {
             "id": "DeploymentPlatforms",
             "valueId": "WindowsStore"
+        },
+        {
+            "id": "Packages",
+            "valueId": "Unity"
+        },
+        {
+            "id": "Packages",
+            "valueId": "Extensions"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Mac"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Linux"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "Windows"
+        },
+        {
+            "id": "DeploymentPlatforms",
+            "valueId": "WindowsStore"
         }
     ]
 }
