Player Controller hierarchy change s& animations

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Assets/Wwise.plugin/Editor/ProjectData/AkWwiseProjectData.asset*
 ## --------------- ##
 ## End WWise Stuff ##
 ## --------------- ##
+Assets/Wwise/Editor/ProjectData/AkWwiseProjectData.asset.meta
