--- a/.gitignore
+++ b/.gitignore
@@ -67,10 +67,7 @@ crashlytics-build.properties
 
 # project stuff
 Froot_WwiseProject/.cache/
-Froot_WwiseProject/*.prof
 Froot_WwiseProject/*_WwiseProject.*.validationcache
-Froot_WwiseProject/*_WwiseProject.*.wsettings
-Froot_WwiseProject/**/*.akd
 
 # build stuff (unsure?)
 # Assets/Wwise/Deployment/Plugins/Windows/**/*.meta
@@ -80,7 +77,7 @@ Froot_WwiseProject/**/*.akd
 # >> Do not keep AkWwiseProjectData.asset under version control! 
 # >> This is a temporary cache file for the Wwise project data, 
 # >> so as to avoid having the Wwise Picker continuously parse the Work Unit files.
-Assets/Wwise.plugin/Editor/ProjectData/AkWwiseProjectData.asset*
+Assets/Wwise/Editor/ProjectData/AkWwiseProjectData.asset*
 
 # notes:
 # 1) if any other files go in Assets/Wwise/Editor/ProjectData/ besides AkWwiseProjectData.asset*,
@@ -88,8 +85,3 @@ Assets/Wwise.plugin/Editor/ProjectData/AkWwiseProjectData.asset*
 #    then, it's OK to ignore this file.
 # 
 # Assets/Wwise/Editor/ProjectData.meta
-
-## --------------- ##
-## End WWise Stuff ##
-## --------------- ##
-Assets/Wwise/Editor/ProjectData/AkWwiseProjectData.asset.meta
