--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 .bmp, filter=lfs diff=lfs merge=lfs -text
 .ogg, filter=lfs diff=lfs merge=lfs -text
 .wav, filter=lfs diff=lfs merge=lfs -text
+*.unity filter=lfs diff=lfs merge=lfs -text
