Builds Windows and MacOS instead of webgl

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     secrets:
       UNITY_LICENSE:
         required: true
+      UNITY_EMAIL:
+        required: true
+      UNITY_PASSWORD:
+        required: true
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -12,35 +16,9 @@ env:
   UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
 
 jobs:
-  buildWebGL:
-    name: Build for WebGL 🖥️
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          lfs: true
-      
-      # Cache
-      - uses: actions/cache@v2
-        with:
-          path: Library
-          key: Library
-          
-      - uses: game-ci/unity-builder@v2
-        with:
-          targetPlatform: WebGL
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: build-WebGL
-          path: build/WebGL
-
   buildWindows:
-    name: Build for Windows 🖥️
-    runs-on: ubuntu-latest
+    name: Build for Windows
+    runs-on: windows-latest
     strategy:
       fail-fast: true
     steps:
@@ -49,7 +27,6 @@ jobs:
         with:
           lfs: true
       
-      # Cache
       - uses: actions/cache@v2
         with:
           path: Library
@@ -63,3 +40,28 @@ jobs:
         with:
           name: build-StandaloneWindows64
           path: build/StandaloneWindows64
+          
+  buildMacos:
+    name: Build for Mac
+    runs-on: macos-latest
+    strategy:
+      fail-fast: true
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library
+
+      - uses: game-ci/unity-builder@v2
+        with:
+          targetPlatform: StandaloneOSX
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-StandaloneOSX
+          path: build/StandaloneOSX
