--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   buildWindows:
     name: Build for Windows
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: true
     steps:
